examples/err-funass1.uc
main() {
    main = 5; // error: assignment to a function

    return 0;
}